2023-10-14T00:40:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6514437523 # 1248
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-14
* notice: last 14d: unq all: 7 39
* notice: prev accum: outdated-unq outdated-all / unq all: 655 1032 / 683 1074
* notice: next accum: outdated-unq outdated-all / unq all: 657 1035 / 683 1074
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-29] / []

2023-10-13T16:11:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6510548696 # 1247
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
* notice: last 14d: unq all: 7 40
* notice: prev accum: outdated-unq outdated-all / unq all: 655 1032 / 681 1072
* notice: next accum: outdated-unq outdated-all / unq all: 655 1032 / 683 1074
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2023-10-13]

2023-10-13T08:12:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6505714728 # 1246
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
* notice: last 14d: unq all: 6 38
* notice: prev accum: outdated-unq outdated-all / unq all: 655 1032 / 680 1071
* notice: next accum: outdated-unq outdated-all / unq all: 655 1032 / 681 1072
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-29 2023-10-13]

2023-10-13T00:42:40Z: