@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-30T16:10:03Z",
-  "count" : 3,
+  "timestamp" : "2023-10-14T08:10:34Z",
+  "count" : 1,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
+  "count_decinc" : [ -2, +3 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
