@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-10-14T00:40:15Z",
+  "timestamp" : "2023-10-14T08:10:34Z",
   "count_outdated" : 1035,
   "uniques_outdated" : 657,
-  "count" : 1074,
-  "uniques" : 683,
+  "count" : 1075,
+  "uniques" : 684,
   "clones" : [
     {
       "timestamp": "2023-09-30T00:00:00Z",
-      "count": 3,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-10-01T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-10-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
