@@ -1,11 +1,11 @@
 {
-  "count": 39,
-  "uniques": 7,
+  "count": 38,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2023-09-30T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-10-01T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2023-10-13T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-10-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
