@@ -1,3 +1,12 @@
+2023-10-14T08:10:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6516498289 # 1249
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-14
+* notice: last 14d: unq all: 6 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 657 1035 / 683 1074
+* notice: next accum: outdated-unq outdated-all / unq all: 657 1035 / 684 1075
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-30 2023-10-14]
+
 2023-10-14T00:40:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6514437523 # 1248
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-14
